# pionless-matrix

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  build.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
claude/agents/: deep-research-pro.md  deep-research.md  fix-worker.md
codex/agents/: deep-research-pro.toml  fix-worker.toml
docs/: agent-system-spec.md
docs/ideal-design/: 01-skill-anatomy.md  02-agent-anatomy.md  03-shared-fragments.md  03-top-level-layout.md  04-cross-platform-vs-claude-only.md  04-shared-fragments.md  05-agent-orchestrates-agent.md  05-cross-platform-vs-claude-only.md  06-agent-orchestrates-agent.md  06-scripts-in-skills.md  07-python-in-skills.md  07-top-level-layout.md  08-worked-example.md  README.md  ideal-design.md
docs/proposals/: freshwater-series.md
plugins/real-ralph/: README.md
plugins/solo-ralph/: README.md
review-agent/: pyproject.toml
review-agent/review_agent/: __init__.py  cli.py  orchestrator.py  prompts.py
scripts/: install-claude.sh  install-codex.sh  ralph-loop.sh
src/agents/: deep-research-drafter.md  deep-research-pro.md  deep-research-verifier.md  deep-research-worker.md  deep-research-writer.md  deep-research.md  fix-worker.md  hoah-coder.md  hoah-reviewer.md  parallel-fix-worker.md  quick-research.md  research-verifier.md  research-worker.md
src/contracts/: deep-research-pro.yaml  deep-research-verifier.yaml  deep-research-worker.yaml  deep-research.yaml  fix-worker.yaml  parallel-fix-worker.yaml  quick-research.yaml  research-verifier.yaml  research-worker.yaml
(+90 files in other folders)
